fixed bug scrollbar

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -104,6 +104,7 @@ li {
 .categories-scroll-container {
     min-width: 100%;
     max-height: 35vh;
+    padding: 0rem 0rem 0.3rem 0rem;
     overflow: auto;
     scrollbar-color: #ff8c00 !important;
 }
@@ -313,6 +314,11 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.btn-dropdown-task {
+    margin-right: -0.5rem;
+    padding: 0;
 }
 
 .card-body-ul {
